--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
 body{
     background: #e4e4e4;
+    font-family: "Roboto";
+    color: #656871;
 }
