--- a/src/appStyle.css
+++ b/src/appStyle.css
@@ -9,15 +9,16 @@ body{
     overflow: hidden;
 }
 .App{
+    position: relative;
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 100vh;
     width: 100vw;
-    align-items: center;
+    overflow: hidden;
 }
 .App .container{
     position: relative;
-    background-color: red;
 }
 
 .App  .container .poly{
