--- a/src/components/Avatar/style.css
+++ b/src/components/Avatar/style.css
@@ -1,8 +1,14 @@
 .avatarContainer img{
     display: block;
-    width: 150px;
+    width: 130px;
     border-radius: 100%;
     border: 7px solid white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
-    margin: auto auto 20px;
+    margin: 10px auto 20px;
+}
+
+@media screen and (min-width: 800px) {
+    .avatarContainer img{
+        width: 150px;
+    }
 }
