--- a/style.css
+++ b/style.css
@@ -4,4 +4,12 @@ body{
     background: #e4e4e4;
     font-family: "Roboto";
     color: #656871;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+}
+
+body .root{
+    overflow: hidden;
+    height: 100vh;
 }
