--- a/src/appStyle.css
+++ b/src/appStyle.css
@@ -41,7 +41,7 @@ body{
 
     animation: animatePoly 5s linear;
     animation-iteration-count: infinite;
-    animation-delay: 2s;
+    /* animation-delay: 2s; */
 }
 .App .container .poly:nth-child(4){
     width: 150px;
@@ -51,5 +51,5 @@ body{
 
     animation: animatePoly 5s linear;
     animation-iteration-count: infinite;
-    animation-delay: 1s;
+    /* animation-delay: 1s; */
 }
