--- a/src/components/Avatar/style.css
+++ b/src/components/Avatar/style.css
@@ -5,8 +5,13 @@
     border: 7px solid white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
     margin: 10px auto 20px;
+    cursor: pointer;
+    transition: .8s;
 }
 
+.avatarContainer img:hover {
+    border-color: #6c6f79;
+}
 @media screen and (min-width: 800px) {
     .avatarContainer img{
         width: 150px;
